# FPL_assistant

./: .env.example  .gitignore  FPL_Assistant.bat  README.md  USER_GUIDE.md  launch.sh  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
data/: adaptive_weights.json  fpl.db.backup  optimized_weights.json
scripts/: migrate_db.py  setup_db.py
src/fpl_assistant/: __init__.py  app.py  cli.py  config.py  validate_recommendations.py
src/fpl_assistant/analysis/: __init__.py  differentials.py  fixture_ticker.py  performance_tracker.py  postgw.py
src/fpl_assistant/api/: __init__.py  auth.py  cache.py  client.py  endpoints.py
src/fpl_assistant/data/: __init__.py  external_stats.py  models.py  ownership.py  processors.py  storage.py  understat.py
src/fpl_assistant/optimizer/: __init__.py  chips.py  constraints.py  model.py  objectives.py  solver.py  transfers.py
src/fpl_assistant/predictions/: __init__.py  adaptive.py  backtest.py  enhanced_weights.py  external.py  intelligence.py  minutes.py  prices.py  projections.py  regression.py  rivals.py  scout.py  set_pieces.py  simulation.py  transfers.py  uncertainty.py  weight_optimizer.py
